scripts/infra/common/ingress-localhost.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: manager
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: grafana.${INGRESS_IP}.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: manager
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: prometheus.${INGRESS_IP}.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
  namespace: manager
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: pushgateway.${INGRESS_IP}.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pushgateway-prometheus-pushgateway
                port:
                  number: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink
  namespace: default
spec:
  rules:
    - host: flink.${INGRESS_IP}.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flink-rest
                port:
                  number: 8081
